// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: medium 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #000;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
picture {
  display: block;
  width: 120px;
  height: 72px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}"
`;

exports[`getComponentCss() should return correct css for size: responsive 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #000;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
picture {
  display: block;
  width: 100px;
  height: 60px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}
@media(min-width:1300px) {
  picture {
    width: 120px;
    height: 72px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: small 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #000;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
picture {
  display: block;
  width: 100px;
  height: 60px;
}
img {
  display: block;
  width: 100%;
  height: auto;
}"
`;
